# Course-Companion-FTE

./: .gitignore  .jwt_secret  AGENT-SKILLS-TEST-PLAN.md  AGENT-SKILLS-TEST-RESULTS.md  ARCHITECTURE-DIAGRAM.md  ARCHITECTURE-VISUAL.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  AUTHENTICATION-CONFIG-GUIDE.md  BACKEND_DEPLOYMENT_GUIDE.md  CAPABILITIES-CONFIGURATION-GUIDE.md  CHATGPT-APP-FIELDS-GUIDE.md  CHATGPT-APP-SETUP-COMPLETE.md  CHATGPT-CONFIGURATION-GUIDE.md  CHATGPT-INTEGRATION-TEST-RESULTS.md  CHATGPT-QUICK-START.md  CHATGPT-SETUP-ASCII.txt  CHATGPT-TESTING-STATUS.md  CHATGPT_APP_ACTION_CHECKLIST.md  CHATGPT_APP_CREATION_COMPLETE.md  CHATGPT_APP_SETUP_GUIDE.md  CHATGPT_INSTRUCTIONS_UPDATE_GUIDE.md  CLOUDFLARE_TUNNEL_COMPLETE.md  CLOUDFLARE_TUNNEL_INDEX.md  CLOUDFLARE_TUNNEL_QUICKSTART.md  CLOUDFLARE_TUNNEL_SETUP.md  CLOUDFLARE_TUNNEL_SUMMARY.md  COMPLETE-GPT-CONFIG-GUIDE.md  COMPLETE_INDEX.md  CREATE_STRIPE_PRODUCT.md  Course-Companion-FTE.md  DEPLOY-NOW.ps1  DEPLOY-RAILWAY.md  DEPLOY-RENDER.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-COMMANDS.md  DEPLOYMENT-FLYIO-GUIDE.md  DEPLOYMENT-ISSUE-FOUND.md  DEPLOYMENT-OPTIONS.md  DEPLOYMENT-QUICK-START.md  (+46 more)
backend/: .env.example  .env.production.example  COMPLETE_SYSTEM_SUMMARY.md  Dockerfile  Dockerfile.fly  Dockerfile.mcp  Dockerfile.production  Dockerfile.railway  FINAL_SYSTEM_SUMMARY.md  PHASE_1_COMPLIANCE_AUDIT.md  PROGRESS_TRACKING_README.md  QUIZ_SYSTEM_README.md  R2_API_README.md  README-MCP.md  STRIPE_INTEGRATION_GUIDE.md  STRIPE_QUICKSTART.md  alembic.ini  chapter_1_content.md  fly-mcp.toml  fly.toml  mcp_http_server.py  mcp_server.py  (+30 more)
(+290 files in other folders)
